# aimo-solver

./: .gitignore  README.md  pyproject.toml
aimo_solver/: __init__.py
aimo_solver/utils/: __init__.py  kaggle_nb_funcs.py
