[tool.poetry]
name = "aimo-solver"
version = "0.1.0"
description = "A package created to solve the AIMO challenge."
authors = ["Darien Schettler <darienschettler@gmail.com>", "Darien Schettler <ds08tf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# vllm = "^0.4.0"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
